update keycloak spi